spring-game-score/k8s/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-game-score
  labels:
    app: spring-game-score
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: spring-game-score

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-game-score
  labels:
    app: spring-game-score
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-game-score
  template:
    metadata:
      labels:
        app: spring-game-score
    spec:
      serviceAccount: "spring-game-score"
      containers:
        - name: spring-game-score
          image: luiscortes/spring-game-score:0.6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: "/spring/actuator/health/readiness"
              port: 8080
              scheme: "HTTP"
            failureThreshold: 3
            initialDelaySeconds: 16
            periodSeconds: 14
            timeoutSeconds: 14
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: "/spring/actuator/health/liveness"
              port: 8080
              scheme: "HTTP"
            failureThreshold: 3
            initialDelaySeconds: 12
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1

---


apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  labels:
    app.kubernetes.io/name: "spring-game-score"
    app.kubernetes.io/version: "v3"
  name: "spring-game-score"

spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /spring
            backend:
              serviceName: spring-game-score
              servicePort: 8080
